samples/_failures_safe/1761005944_3d8a83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1e04efb.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c1e04efb.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c1e04efb.c:163:5: error: expected declaration or statement at end of input
  163 |     for
      |     ^~~
